feat(footer): move Git link to Github repo list

--- a/assets/css/src/colours.less
+++ b/assets/css/src/colours.less
@@ -31,6 +31,7 @@
 @rss: #b45b4f;
 @mastodon: #6364ff;
 @gitlab: #e24329;
+@github: #222;
 
 //From Bootstrap vars - note duplicated and spelling fixed so I don't keep forgetting...
 @grey-base:              #000;
