feat: Add sidebar box linking to fediverse account

--- a/assets/css/src/cards.less
+++ b/assets/css/src/cards.less
@@ -39,6 +39,10 @@ a.thumbnail, a.card {
     padding-right: 15px;
 }
 
+.card-body {
+    padding: 10px;
+}
+
 @media screen and (min-width: 992px) {
     .card.horizontal-md {
         display: flex;
