--- a/assets/css/src/styles.less
+++ b/assets/css/src/styles.less
@@ -20,6 +20,8 @@
 @import 'podcast.less';
 @import 'text-cols.less';
 @import 'demonstrations.less';
+@import 'sidebar.less';
+@import 'tooltips.less';
 
 //Font Awesome
 @import '../../../node_modules/@fortawesome/fontawesome-free/less/fontawesome.less';
@@ -146,16 +148,6 @@ article aside {
 .year-list {
     text-indent: -3.3em;
     padding-left: 3.3em;
-}
-
-a.tooltip-icon {
-    color: @grey-light;
-    &:hover {
-        text-decoration: none;
-    }
-    i {
-        text-indent: 0;
-    }
 }
 
 /* Breadcrumbs*/
