feat: remove podcast section and replace with Castopod site
* The podcast section is completely removed
* Podcast pages draw on the RSS feed from Castopod
* Section integrations removed

--- a/assets/css/src/images.less
+++ b/assets/css/src/images.less
@@ -45,3 +45,14 @@ img.bordered {
 	margin: 0;
 	padding: 0;
 }
+
+svg.icon {
+    width: 1em;
+    height: 1em;
+    //vertical-align: middle - doesn't line up well with the text
+    position: relative;
+    top: 0.125em;
+    a:hover & {
+        opacity: 0.85;
+    }
+}
