--- a/assets/css/src/styles.less
+++ b/assets/css/src/styles.less
@@ -7,6 +7,7 @@
 @import 'header.less';
 @import 'navigation.less';
 @import 'footer.less';
+@import 'grid.less';
 @import 'homepage.less';
 @import 'search.less';
 @import 'datatables.less';
