feat: add a calendar page showing 'on this day' entries for the whole year
This adds a calendar highlighting events, documents, demonstrations and subjects matching each date.

--- a/assets/css/src/styles.less
+++ b/assets/css/src/styles.less
@@ -22,6 +22,7 @@
 @import 'demonstrations.less';
 @import 'sidebar.less';
 @import 'tooltips.less';
+@import 'calendar.less';
 
 //Font Awesome
 @import '../../../node_modules/@fortawesome/fontawesome-free/less/fontawesome.less';
