--- a/assets/css/src/calendar.less
+++ b/assets/css/src/calendar.less
@@ -5,7 +5,7 @@ section.month {
 	margin: 2em 0;
 }
 
-@media (min-width: 960px) {
+@media (min-width: 992px) {
 	section.month {
 		flex-direction: row;
 		header {
@@ -32,16 +32,20 @@ ul.days {
 	a {
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
+		justify-content: space-between;
 		align-items: center;
 		width: 100%;
-		height: 4em;
+		height: 6em;
+		padding: 0.5em;
 		font-weight: 700;
+		div {
+			flex: 1;
+		}
 		&:hover, &:focus {
 			background: @mainSoft;
 			text-decoration: none;
 			ul.indicators {
-				visibility: visible;
+				opacity: 1;
 			}
 		}
 		&[data-total="0"] {
@@ -50,9 +54,9 @@ ul.days {
 			font-weight: normal;
 			&:hover, &:focus {
 				background: inherit;
-				ul.indicators {
-					visibility: hidden;
-				}
+			}
+			ul.indicators {
+				visibility: hidden;
 			}
 		}
 		&:not([data-events="0"]) li.events,
@@ -65,11 +69,24 @@ ul.days {
 }
 
 ul.indicators {
-	visibility: hidden;
 	list-style: none;
+	width: 100%;
 	padding: 0;
+	font-size: 0.7142857em;
 	color: lighten(@grey-base, 75%);
+	opacity: 0.5;
+	display: flex;
 	li {
-		display: inline-block;
+		flex: 0 0 25%;
+		text-align: center;
+	}
+}
+
+@media (min-width: 992px) {
+	ul.days a {
+		font-size: 1.2em;
+	}
+	ul.indicators  {
+		font-size: 0.833em;
 	}
 }
