--- a/assets/css/src/calendar.less
+++ b/assets/css/src/calendar.less
@@ -1,15 +1,71 @@
-
-section.month {
-	display:flex;
-	flex-direction: column;
-	margin: 2em 0;
+.calendar {
+	display: flex;
+	flex-wrap: wrap;
+	align-content: start;
+	position: relative;
+	min-height: 41em;
+	details {
+		width: 25%;
+		padding: 0.5em;
+		summary::-webkit-details-marker {
+			display: none;
+		}
+		summary {
+			display: flex;
+			align-items: center;
+			font-size: 1.2em;
+			font-weight: 700;
+			cursor: pointer;
+			height: 10em;
+			text-align: center;
+			color: @grey-light;
+			border: 1px solid #ccc;
+			border-radius: 3px;
+			transition: all 0.1s ease-in;
+			p {
+				flex: 1;
+				margin: 0;
+			}
+			&:hover, &:focus {
+				background: @grey-lighter;
+			}
+		}
+	}
+	details[open] {
+		width: 100%;
+		position: absolute;
+		z-index: 100;
+		left: 0;
+		top: 0;
+		background: #fff;
+		transition: all 0.2s ease-in;
+		summary {
+			height: 3em;
+			margin: 0;
+			text-align: left;
+			color: #333;
+			border: none;
+			&:hover, &:focus {
+				background: none;
+			}
+			.summary-btn::before {
+				content: 'Close';
+				font-weight: normal;
+			}
+			.summary-btn::after {
+				content: ' ✕';
+			}
+		}
+	}
 }
 
 @media (min-width: 992px) {
-	section.month {
-		flex-direction: row;
-		header {
-			min-width: 8em;
+	.calendar {
+		details {
+			width: 16.6%;
+		}
+		details[open] {
+			flex-direction: row;
 		}
 	}
 }
@@ -74,7 +130,7 @@ ul.indicators {
 	padding: 0;
 	font-size: 0.7142857em;
 	color: lighten(@grey-base, 75%);
-	opacity: 0.5;
+	opacity: 0.75;
 	display: flex;
 	li {
 		flex: 0 0 25%;
