feat(css): set default focus-visible to match main colour

--- a/assets/css/src/styles.less
+++ b/assets/css/src/styles.less
@@ -47,6 +47,10 @@ html,body {
     height: 100%;
 }
 
+:focus-visible {
+    outline: 3px solid @main;
+}
+
 /* Replace bootstrap font stack */
 body {
     font-family: 'Open Sans', sans-serif;
