fix(calendar): switch days to <ol>
If anything is an <ol> rather than <ul>, it's the days of the month…

--- a/assets/css/src/calendar.less
+++ b/assets/css/src/calendar.less
@@ -79,7 +79,7 @@
 	}
 }
 
-ul.days {
+ol.days {
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -147,7 +147,7 @@ ul.indicators {
 }
 
 @media (min-width: 992px) {
-	ul.days a {
+	ol.days a {
 		font-size: 1.2em;
 	}
 	ul.indicators  {
