feat(css): set nested italics to normal font-style

--- a/assets/css/src/styles.less
+++ b/assets/css/src/styles.less
@@ -23,6 +23,7 @@
 @import 'sidebar.less';
 @import 'tooltips.less';
 @import 'calendar.less';
+@import 'typography-general.less';
 
 //Font Awesome
 @import '../../../node_modules/@fortawesome/fontawesome-free/less/fontawesome.less';
