feat: Change softened colour to match primary hue

--- a/assets/css/src/colours.less
+++ b/assets/css/src/colours.less
@@ -4,7 +4,7 @@
 @mainBorder: darken(@main, 5%);
 @mainDark: #246;
 
-@mainSoft: #e6eef7;
+@mainSoft: #dbf1ff;
 @mainSoftBorder: darken(@mainSoft, 8%);
 
 @second: #246;
@@ -22,7 +22,7 @@
 
 
 //Panel over-rides
-@panelDefault: lighten(@main, 40%);
+@panelDefault: @mainSoft;
 
 //Social media and icon colours
 @twitter: rgba(0, 132, 180, 0.8);
