feat: update git repositories links

--- a/assets/css/src/colours.less
+++ b/assets/css/src/colours.less
@@ -32,6 +32,7 @@
 @mastodon: #6364ff;
 @gitlab: #e24329;
 @github: #222;
+@git: #f34c27;
 
 //From Bootstrap vars - note duplicated and spelling fixed so I don't keep forgetting...
 @grey-base:              #000;
