--- a/assets/css/src/footer.less
+++ b/assets/css/src/footer.less
@@ -57,6 +57,9 @@
     a.github:hover {
         background: @github;
     }
+    a.git:hover {
+        background: @git;
+    }
     a.ila:hover {
         background: @main;
     }
