feat(css): add selection style

--- a/assets/css/src/styles.less
+++ b/assets/css/src/styles.less
@@ -52,6 +52,11 @@ html,body {
     outline: 3px solid @main;
 }
 
+::selection {
+    background: @main;
+    color: #fff;
+}
+
 /* Replace bootstrap font stack */
 body {
     font-family: 'Open Sans', sans-serif;
